j7elte: Disable TIMA
Change-Id: Ic81b8b42e5358cee1c216f65ea749c6b0cc180f1
Signed-off-by: Apavayan <info@apavayan.com>

--- a/arch/arm64/configs/cyanogenmod_j7elte_defconfig
+++ b/arch/arm64/configs/cyanogenmod_j7elte_defconfig
@@ -292,12 +292,8 @@ CONFIG_MACH_UNIVERSAL7580=y
 CONFIG_EXYNOS_SPI_RESET_DURING_DSTOP=y
 CONFIG_EXYNOS_I2C_RESET_DURING_DSTOP=y
 CONFIG_EXYNOS_HSI2C_RESET_DURING_DSTOP=y
-CONFIG_TIMA=y
+# CONFIG_TIMA is not set
 # CONFIG_TIMA_LKMAUTH is not set
-CONFIG_TIMA_RKP=y
-CONFIG_RKP_KDP=y
-CONFIG_RKP_DMAP_PROT=y
-# CONFIG_TIMA_TEST_INFRA is not set
 
 #
 # Bus support
