--- a/arch/arm64/configs/exynos7580-base_defconfig
+++ b/arch/arm64/configs/exynos7580-base_defconfig
@@ -292,12 +292,8 @@ CONFIG_MACH_UNIVERSAL7580=y
 CONFIG_EXYNOS_SPI_RESET_DURING_DSTOP=y
 CONFIG_EXYNOS_I2C_RESET_DURING_DSTOP=y
 CONFIG_EXYNOS_HSI2C_RESET_DURING_DSTOP=y
-CONFIG_TIMA=y
+# CONFIG_TIMA is not set
 # CONFIG_TIMA_LKMAUTH is not set
-CONFIG_TIMA_RKP=y
-CONFIG_RKP_KDP=y
-CONFIG_RKP_DMAP_PROT=y
-# CONFIG_TIMA_TEST_INFRA is not set
 
 #
 # Bus support
