j7elte: Update defconfig
Change-Id: I5a00d6972a1a49f44b461603e6947be4e1516b12

--- a/arch/arm64/configs/cyanogenmod_j7elte_defconfig
+++ b/arch/arm64/configs/cyanogenmod_j7elte_defconfig
@@ -294,6 +294,7 @@ CONFIG_EXYNOS_I2C_RESET_DURING_DSTOP=y
 CONFIG_EXYNOS_HSI2C_RESET_DURING_DSTOP=y
 # CONFIG_TIMA is not set
 # CONFIG_TIMA_LKMAUTH is not set
+# CONFIG_TIMA_TEST_INFRA is not set
 
 #
 # Bus support
@@ -1001,14 +1002,13 @@ CONFIG_KNOX_KAP=y
 # CONFIG_HMC6352 is not set
 # CONFIG_DS1682 is not set
 # CONFIG_TI_DAC7512 is not set
-# CONFIG_UID_STAT is not set
+CONFIG_UID_STAT=y
 # CONFIG_BMP085_I2C is not set
 # CONFIG_BMP085_SPI is not set
 # CONFIG_USB_SWITCH_FSA9480 is not set
 # CONFIG_LATTICE_ECP3_CONFIG is not set
 # CONFIG_SRAM is not set
 CONFIG_SAMSUNG_JACK=y
-CONFIG_TIMA_LOG=y
 # CONFIG_C2PORT is not set
 
 #
@@ -2605,6 +2605,7 @@ CONFIG_SAMSUNG_USB2PHY_CAL=y
 # CONFIG_USB_ISP1301 is not set
 # CONFIG_USB_RCAR_PHY is not set
 # CONFIG_USB_ULPI is not set
+# CONFIG_DUAL_ROLE_USB_INTF is not set
 CONFIG_USB_GADGET=y
 # CONFIG_USB_GADGET_DEBUG is not set
 # CONFIG_USB_GADGET_DEBUG_FILES is not set
@@ -2638,7 +2639,7 @@ CONFIG_USB_U_SERIAL=y
 # CONFIG_USB_G_PRINTER is not set
 CONFIG_USB_G_ANDROID=y
 CONFIG_USB_ANDROID_SAMSUNG_COMPOSITE=y
-CONFIG_USB_ANDROID_SAMSUNG_MTP=y
+# CONFIG_USB_ANDROID_SAMSUNG_MTP is not set
 # CONFIG_USB_LOCK_SUPPORT_FOR_MDM is not set
 CONFIG_USB_DUN_SUPPORT=y
 CONFIG_USB_NCM_SUPPORT_MTU_CHANGE=y
