--- a/arch/arm64/configs/cyanogenmod_j7elte_defconfig
+++ b/arch/arm64/configs/cyanogenmod_j7elte_defconfig
@@ -381,7 +381,7 @@ CONFIG_SECCOMP=y
 #
 # Boot options
 #
-CONFIG_CMDLINE="console=ttySAC1"
+CONFIG_CMDLINE="console=ttySAC1 androidboot.hardware=samsungexynos7580"
 CONFIG_CMDLINE_FROM_BOOTLOADER=y
 # CONFIG_CMDLINE_EXTEND is not set
 # CONFIG_CMDLINE_FORCE is not set
