j7elte: Disable TIMA log
Change-Id: I3e6f56c76d61b508c58ec219fa227c6908d83b5c
Signed-off-by: Apavayan <info@apavayan.com>

--- a/arch/arm64/configs/cyanogenmod_j7elte_defconfig
+++ b/arch/arm64/configs/cyanogenmod_j7elte_defconfig
@@ -3034,7 +3034,7 @@ CONFIG_SEC_BSP=y
 #
 CONFIG_SEC_AVC_LOG=y
 CONFIG_SEC_DEBUG_TSP_LOG=y
-CONFIG_SEC_DEBUG_TIMA_LOG=y
+# CONFIG_SEC_DEBUG_TIMA_LOG is not set
 
 #
 # Samsung TN Power Management Options
