defconfig: update the cyanogenmod j7elte defconfig
Change-Id: I632237b7c9fb8a2782db87f3150fb3a8ef90e9c5

--- a/arch/arm64/configs/cyanogenmod_j7elte_defconfig
+++ b/arch/arm64/configs/cyanogenmod_j7elte_defconfig
@@ -697,6 +697,7 @@ CONFIG_NETFILTER_XT_MATCH_QTAGUID=y
 CONFIG_NETFILTER_XT_MATCH_QUOTA=y
 CONFIG_NETFILTER_XT_MATCH_QUOTA2=y
 CONFIG_NETFILTER_XT_MATCH_QUOTA2_LOG=y
+CONFIG_NETFILTER_XT_MATCH_QUOTA2_LOG_32BIT=y
 # CONFIG_NETFILTER_XT_MATCH_RATEEST is not set
 # CONFIG_NETFILTER_XT_MATCH_REALM is not set
 # CONFIG_NETFILTER_XT_MATCH_RECENT is not set
@@ -794,7 +795,7 @@ CONFIG_NET_SCHED=y
 # CONFIG_NET_SCH_CBQ is not set
 CONFIG_NET_SCH_HTB=y
 # CONFIG_NET_SCH_HFSC is not set
-# CONFIG_NET_SCH_PRIO is not set
+CONFIG_NET_SCH_PRIO=y
 # CONFIG_NET_SCH_MULTIQ is not set
 # CONFIG_NET_SCH_RED is not set
 # CONFIG_NET_SCH_SFB is not set
@@ -817,7 +818,7 @@ CONFIG_NET_SCH_INGRESS=y
 # Classification
 #
 CONFIG_NET_CLS=y
-# CONFIG_NET_CLS_BASIC is not set
+CONFIG_NET_CLS_BASIC=y
 # CONFIG_NET_CLS_TCINDEX is not set
 # CONFIG_NET_CLS_ROUTE4 is not set
 # CONFIG_NET_CLS_FW is not set
@@ -3270,14 +3271,7 @@ CONFIG_PC_ITERATION=5
 # CONFIG_EXYNOS_CORESIGHT_STM is not set
 CONFIG_EXYNOS_BTS=y
 CONFIG_EXYNOS7580_BTS=y
-
-#
-# Haptic configs
-#
-# CONFIG_DRV2603 is not set
 CONFIG_SEC_VIB=y
-CONFIG_IMM_VIB=y
-# CONFIG_IMM_DRV_VERSION_3_7 is not set
 
 #
 # IRLED configs
