j7elte: Disable TIMA
Change-Id: I640919ef89abeca91b4106d29207ce3f271eb66d

--- a/arch/arm64/configs/cyanogenmod_j7elte_defconfig
+++ b/arch/arm64/configs/cyanogenmod_j7elte_defconfig
@@ -222,7 +222,11 @@ CONFIG_BLOCK_SUPPORT_STLOG=y
 CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_CFQ=y
+# CONFIG_IOSCHED_BFQ is not set
+CONFIG_IOSCHED_FIOPS=y
+# CONFIG_DEFAULT_DEADLINE is not set
 CONFIG_DEFAULT_CFQ=y
+# CONFIG_DEFAULT_FIOPS is not set
 # CONFIG_DEFAULT_NOOP is not set
 CONFIG_DEFAULT_IOSCHED="cfq"
 CONFIG_UNINLINE_SPIN_UNLOCK=y
@@ -292,11 +296,8 @@ CONFIG_MACH_UNIVERSAL7580=y
 CONFIG_EXYNOS_SPI_RESET_DURING_DSTOP=y
 CONFIG_EXYNOS_I2C_RESET_DURING_DSTOP=y
 CONFIG_EXYNOS_HSI2C_RESET_DURING_DSTOP=y
-CONFIG_TIMA=y
+# CONFIG_TIMA is not set
 # CONFIG_TIMA_LKMAUTH is not set
-CONFIG_TIMA_RKP=y
-CONFIG_RKP_KDP=y
-CONFIG_RKP_DMAP_PROT=y
 # CONFIG_TIMA_TEST_INFRA is not set
 
 #
@@ -434,6 +435,7 @@ CONFIG_CPU_PM=y
 #
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_TABLE=y
+CONFIG_CPU_FREQ_GOV_COMMON=y
 CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_STAT_DETAILS is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE is not set
@@ -1013,7 +1015,6 @@ CONFIG_KNOX_KAP=y
 # CONFIG_LATTICE_ECP3_CONFIG is not set
 # CONFIG_SRAM is not set
 CONFIG_SAMSUNG_JACK=y
-CONFIG_TIMA_LOG=y
 # CONFIG_C2PORT is not set
 
 #
