j7elte: Disable Samsung Power Management and Enable BQP I/O block
Change-Id: I9399c99e74b1d35311815ab6dfa98379414cd77a

--- a/arch/arm64/configs/cyanogenmod_j7elte_defconfig
+++ b/arch/arm64/configs/cyanogenmod_j7elte_defconfig
@@ -234,7 +234,10 @@ CONFIG_BLOCK_SUPPORT_STLOG=y
 CONFIG_IOSCHED_NOOP=y
 # CONFIG_IOSCHED_DEADLINE is not set
 CONFIG_IOSCHED_CFQ=y
+CONFIG_IOSCHED_BFQ=y
+CONFIG_CGROUP_BFQIO=y
 CONFIG_DEFAULT_CFQ=y
+# CONFIG_DEFAULT_BFQ is not set
 # CONFIG_DEFAULT_NOOP is not set
 CONFIG_DEFAULT_IOSCHED="cfq"
 CONFIG_ASN1=y
@@ -3162,8 +3165,7 @@ CONFIG_SEC_DEBUG_TIMA_LOG=y
 #
 # Samsung TN Power Management Options
 #
-CONFIG_SEC_PM=y
-CONFIG_SEC_PM_DEBUG=y
+# CONFIG_SEC_PM is not set
 CONFIG_VNSWAP=y
 CONFIG_CLKDEV_LOOKUP=y
 CONFIG_HAVE_CLK_PREPARE=y
